--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "rm -rf docs && react-scripts build && mv build docs",
+        "clean": "rm -rf docs",
+        "build": "npm run clean && react-scripts build && mv build docs",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -55,5 +56,5 @@
     "devDependencies": {
         "node-sass": "^4.13.0"
     },
-    "homepage": "./"
+    "homepage": ""
 }
