--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "devDependencies": {
         "node-sass": "^4.13.0"
     },
-    "homepage": "https://bianca-read-write.github.io/my-app"
+    "homepage": "/"
 }
