--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "clean": "rm -rf docs",
-        "build": "npm run clean && react-scripts build && mv build docs",
+        "build": "react-scripts build",
+        "predeploy": "npm run build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -54,7 +54,8 @@
         ]
     },
     "devDependencies": {
+        "gh-pages": "^3.2.3",
         "node-sass": "^4.13.0"
     },
-    "homepage": "/"
+    "homepage": "https://bianca-read-write.github.io/"
 }
