add login / logout, bend carousel to my will

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "animate.css": "^3.7.2",
         "axios": "^0.19.2",
         "bootstrap": "^4.5.3",
+        "browser-cookies": "^1.2.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "font-awesome": "^4.7.0",
@@ -33,7 +34,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
+        "deploy": "gh-pages -d build --repo='https://bianca-read-write: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@github.com/bianca-read-write/bianca-read-write.github.io.git'",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
