--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build --repo='https://bianca-read-write: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@github.com/bianca-read-write/bianca-read-write.github.io.git'",
+        "deploy": "gh-pages -d build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
