--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-scripts": "3.2.0",
         "react-scroll": "^1.7.16",
         "shims": "^1.0.0",
+        "styled-components": "^5.3.1",
         "swiper": "^5.4.5"
     },
     "scripts": {
